--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy31]
+[env:teensy35]
 platform = teensy
-board = teensy31
+board = teensy35
 framework = arduino
+lib_deps = bogde/HX711@^0.7.5
